--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@rails/webpacker": "https://github.com/rails/webpacker.git",
     "bootstrap": "^4.5.3",
     "jquery": "^3.5.1",
+    "mapbox-gl": "^1.13.0",
     "popper.js": "^1.16.1",
     "turbolinks": "^5.2.0"
   },
